# polyglot-booking-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.fr.md  README.md  pyproject.toml
.github/workflows/: ci.yml  evals.yml
config/: practice.example.yaml
docs/: architecture.fr.md  architecture.md  design-decisions.fr.md  design-decisions.md
evals/: __init__.py  __main__.py  checks.py  judge.py  persona.py  report.py  runner.py  schema.py
evals/scenarios/: booking_en.yaml  booking_fr_premium.yaml  booking_switcher.yaml  cancel_by_phone.yaml  cancel_nothing_found.yaml  change_of_mind.yaml  full_day_escalation.yaml  garbled_identity.yaml  insist_outside_window.yaml  race_recovery.yaml  rambler_fr.yaml  reschedule_existing.yaml
scripts/: browser_call.py  demo_conversation.py  run_radicale.py  seed_calendar.py
src/agent/: __init__.py  cli.py  loop.py  prompts.py  tools.py  types.py
src/agent/providers/: __init__.py  base.py  fake.py  gemini_provider.py  openai_provider.py
src/calendar_adapter/: __init__.py  adapter.py  devserver.py  errors.py
src/channels/: __init__.py  livekit_agent.py  telegram_bot.py  telegram_channel.py
src/observability/: __init__.py
src/scheduling_engine/: __init__.py  config.py  engine.py  models.py
src/speech/: __init__.py  cartesia_tts.py  deepgram_stt.py  langdetect.py  types.py
tests/: conftest.py  test_agent.py  test_calendar_adapter.py  test_constraints.py  test_eval_checks.py  test_eval_judge.py  test_langdetect.py  test_observability.py  test_properties.py  test_scoring.py  test_speech.py  test_telegram_channel.py
