[project]
name = "polyglot-booking-agent"
version = "0.1.0"
description = "Multilingual voice AI agent for appointment booking: deterministic scheduling engine, CalDAV calendar as the single source of truth, phone/WebRTC/Telegram channels."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Etienne TOVIMAFA" }]
keywords = [
    "voice-agent",
    "ai-agent",
    "appointment-scheduling",
    "caldav",
    "llm",
    "tool-calling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "caldav>=1.3",
    "icalendar>=5.0",
    "openai>=1.40",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "livekit-agents[cartesia,deepgram,openai,silero]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "radicale>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduling_engine", "src/calendar_adapter", "src/agent", "src/speech", "src/channels"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # third-party deprecation inside radicale, not ours
    "ignore::DeprecationWarning:radicale.*",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["scheduling_engine", "calendar_adapter", "agent", "speech", "channels"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["caldav.*", "icalendar.*", "radicale.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["calendar_adapter.adapter", "calendar_adapter.devserver"]
# caldav and radicale are untyped; calls are checked at the boundary
disallow_untyped_calls = false
warn_return_any = false
